--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Mitos y leyendas</h1>
+<p></p>
+<p>Trabajo</p>
+<p></p>
+<p></p>
     </main>
 	<script src="index.js"></script>
   </body>
