--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <main>
-        <h1>Mitos y leyendas</h1>
-<p></p>
-<p>Trabajo</p>
-<p></p>
-<p></p>
-    </main>
+       <h1 style="text-align: center;">Mitos y leyendas</h1>
+<p>Trabajo De Id.Espa&ntilde;ol</p>
+<p><a href="file:///C:/Users/betin/OneDrive/Documentos/GitHub/agush1245.github.io/elBaca.html" title="El Baca">file:///C:/Users/betin/OneDrive/Documentos/GitHub/agush1245.github.io/elBaca.html</a></p>
+<p>&nbsp;<img src="elbaca2.jpg" width="266" height="182" alt="" />El baca<img src="elbaca2.jpg" alt="" /></p>
+<p style="text-align: right;">el cuco</p>
+<p style="text-align: left;">la ciguapa</p>
 	<script src="index.js"></script>
   </body>
 </html>
